Closed Bug 1835696 Opened 2 years ago Closed 2 years ago

Navigation to typedef inside dependent class template specialization

Categories

(Webtools :: Searchfox, defect)

defect

Tracking

(firefox115 fixed)

RESOLVED FIXED
Tracking Status
firefox115 --- fixed

People

(Reporter: botond, Assigned: botond)

References

Details

Attachments

(1 file)

Steps to reproduce

Have Searchfox index the following code:

template <typename>
struct A  {
  using type = int;
};  

template <typename T>
void foo(typename A<T>::type);

Expected results

Navigation from the use of type goes to the definition.

Actual results

No navigation is offered at the use.

Here, the kind of AST node containing the use is not an Expr, but a TypeLoc, so the relevant visit methods are Visit*TypeLoc().

The kind of TypeLoc here is DependentNameTypeLoc, which MozsearchIndexer is missing handling for.

Depends on: 1835694
Pushed by bballo@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6f34b6289b38 Handle DependentNameTypeLoc in MozsearchIndexer. r=asuth DONTBUILD
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: