Bug 1835696 - Handle DependentNameTypeLoc in MozsearchIndexer. r=asuth DONTBUILD

Differential Revision: https://phabricator.services.mozilla.com/D179402